[package]
authors = ["Finomnis <finomnis@gmail.com>"]
name = "st7565"
edition = "2018"
version = "0.1.5"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Finomnis/st7565"
description = "Driver for st7565 based displays."
keywords = ["no-std", "st7565", "lcd", "embedded", "embedded-hal-driver"]
categories = ["embedded", "no-std"]

exclude = [
    "/.gitignore",
    "/.github/",
    "/.vscode/",
    "/TODO.txt",
    "/UPCOMING_VERSION_CHANGES.txt",
]

[lib]
harness = false

[dependencies]
display-interface = "0.4.1"
embedded-hal = "0.2.7"
embedded-graphics-core = "0.3.3"

[dev-dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
nrf52840-hal = "0.16.0"
defmt-test = "0.3.0"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3           # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = false
opt-level = 3           # <-
overflow-checks = false # <-
